--- a/app/src/main/res/layout/activity_java_bahcesi_button1_1.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button1_1.xml
@@ -9,27 +9,33 @@
 
     <TextView
         android:id="@+id/tvbahce1_1Soru"
-        android:layout_width="400dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Java Nedir ? "
         android:textColor="@color/colorAccent"
         android:textSize="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnBahce1_1Y1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnBahce1_1Y1"
-        android:layout_width="402dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:onClick="btnBahce1_1Y1"
         android:text="Geliştirme Ortamı"
         app:layout_constraintBottom_toTopOf="@+id/btnBahce1_1Y2"
@@ -39,13 +45,15 @@
 
     <Button
         android:id="@+id/btnBahce1_1Y2"
-        android:layout_width="402dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:onClick="btnBahce1_1Y2"
         android:text="Kod Edütörü"
         app:layout_constraintBottom_toTopOf="@+id/btnBahce1_1Y3"
@@ -55,13 +63,14 @@
 
     <Button
         android:id="@+id/btnBahce1_1Y3"
-        android:layout_width="403dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:onClick="btnBahce1_1Y3"
         android:text="Düzenleme Aracı"
         app:layout_constraintBottom_toTopOf="@+id/btnBahce1_1D1"
@@ -71,13 +80,14 @@
 
     <Button
         android:id="@+id/btnBahce1_1D1"
-        android:layout_width="403dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:onClick="btnBahce1_1D1"
         android:text="Programlama Dili"
         app:layout_constraintBottom_toBottomOf="parent"
