--- a/app/src/main/res/layout/activity_java_bahcesi_button1_6.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button1_6.xml
@@ -9,29 +9,33 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
 
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="Efsane"
         android:textColor="@color/colorAccent"
+        android:background="@drawable/elips"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="Ekrana 'Efsane' nasıl yazdırılabilir ? "
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
@@ -42,15 +46,19 @@
 
     <EditText
         android:id="@+id/edCevap1_6"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:ems="10"
+        android:gravity="center|center_horizontal|center_vertical"
         android:hint="Yazmaya başla"
         android:inputType="textPersonName"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir1_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +74,8 @@
         android:layout_marginBottom="16dp"
         android:onClick="calistir1_6"
         android:text="Çalıştır"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam1_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -79,12 +89,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="Devam"
+        android:layout_marginBottom="32dp"
         android:onClick="devam1_6"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
+        android:text="Devam"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistir1_5" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCalistir1_6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
