--- a/app/src/main/res/layout/activity_java_bahcesi_button2_4.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button2_4.xml
@@ -5,23 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".JavaBahcesi2.JavaBahcesiButton2_4"
-    android:background="@drawable/simge2"
+    android:background="@drawable/simgepembe"
 
     >
 
     <TextView
         android:id="@+id/textView15"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
-        android:text="(3+9)/2"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="(3+9) / 2"
         android:textColor="@color/colorAccent"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap2_4_1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,17 +32,19 @@
         android:id="@+id/btnCevap2_4_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+
         android:onClick="btn2_4_1"
         android:text="6"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="32sp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap2_4_2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
@@ -47,15 +52,17 @@
         android:id="@+id/btnCevap2_4_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
-        android:text="6.0"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+
         android:onClick="btn2_4_2"
+        android:text="6.0"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="32sp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
+
         app:layout_constraintBottom_toTopOf="@+id/btnCevap2_4_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -66,15 +73,16 @@
         android:id="@+id/btnCevap2_4_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+
         android:onClick="btn2_4_3"
-        android:layout_marginBottom="24dp"
         android:text="0.06"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="32sp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap2_4_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -85,15 +93,15 @@
         android:id="@+id/btnCevap2_4_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
+
         android:onClick="btn2_4_4"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
         android:text="0.6"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="32sp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
