--- a/app/src/main/res/layout/activity_java_bahcesi_button3_2.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button3_2.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/textView20"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -19,6 +19,7 @@
         android:text="Hangisi float veri tipinde değildir ? "
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
+        android:background="@drawable/elips"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,14 +30,14 @@
         android:id="@+id/btnCevap3_2_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="cevapDogru3_2_1"
         android:text="4"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
 
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_2"
@@ -48,14 +49,14 @@
         android:id="@+id/btnCevap3_2_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="cevapYanlis3_2_2"
         android:text="3/4"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,14 +68,14 @@
         android:id="@+id/btnCevap3_2_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="cevapYanlis3_2_3"
         android:text="4.0"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,14 +87,14 @@
         android:id="@+id/btnCevap3_2_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/elips_button"
         android:onClick="cevapYanlis3_2_4"
         android:text="0.75"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
