--- a/app/src/main/res/layout/activity_java_bahcesi_button4_2.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button4_2.xml
@@ -11,14 +11,17 @@
     <TextView
         android:id="@+id/textView25"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Math.sqrt(16.0);"
+        android:background="@drawable/elips"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvCevap4_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,13 +29,14 @@
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_vertical"
+        android:background="@drawable/elips"
         android:text="Java'da kök almak için ''sqrt'' fonksiyonunu kullanırız."
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
@@ -44,10 +48,11 @@
     <TextView
         android:id="@+id/tvCevap4_2"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/elips"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
@@ -66,10 +71,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+
         android:onClick="calistir4_2"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam4_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,10 +89,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+
         android:onClick="devam4_2"
         android:text="DEVAM"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
