--- a/app/src/main/res/layout/activity_java_bahcesi_button4_4.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button4_4.xml
@@ -10,16 +10,17 @@
 
     <TextView
         android:id="@+id/textView29"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="İşlemin sonucu ne olur ? 23 % Math.pow(3,2)"
         android:textColor="@color/colorAccent"
-        android:textSize="36sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,15 +30,15 @@
         android:id="@+id/btnCevap4_4_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="cevap_4_4_1"
         android:text="3"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
-        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,15 +48,15 @@
         android:id="@+id/btnCevap4_4_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
-        android:text="0"
-        android:textSize="24sp"
+        android:background="@drawable/elips_button"
         android:onClick="cevap_4_4_2"
-        android:textColor="@color/colorAccent"
+        android:text="0"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -66,14 +67,14 @@
         android:id="@+id/btnCevap4_4_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="cevap_4_4_3"
         android:text="5"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,14 +86,14 @@
         android:id="@+id/btnCevap4_4_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="cevap_4_4_4"
         android:text="6"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
