--- a/app/src/main/res/layout/activity_java_bahcesi_button5_3.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button5_3.xml
@@ -10,12 +10,13 @@
 
     <TextView
         android:id="@+id/textView34"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:background="@drawable/elips"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Aşağıdaki kodlardan hangisi hata verir ? "
         android:textColor="@color/colorAccent"
@@ -29,14 +30,14 @@
         android:id="@+id/btnCevap5_3_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:onClick="cevap5_3_1"
         android:text="System.out.println('' 2 '' + '' java '');"
-        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap5_3_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,14 +48,15 @@
         android:id="@+id/btnCevap5_3_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:onClick="cevap5_3_2"
         android:text="System.out.println('' 3 '' + '' 2 '');"
-        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap5_3_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,14 +67,15 @@
         android:id="@+id/btnCevap5_3_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+
         android:onClick="cevap5_3_3"
         android:text="System.out.println(''3'' + 2);"
-        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap5_3_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,14 +86,15 @@
         android:id="@+id/btnCevap5_3_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+
         android:onClick="cevap5_3_4"
         android:text="System.out.println('' String '' + '' öğreniyorum '');"
-        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
