--- a/app/src/main/res/layout/activity_java_bahcesi_button6_3.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button6_3.xml
@@ -17,10 +17,13 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:ems="10"
+        android:gravity="center|center_horizontal|center_vertical"
         android:hint="boşluğu doldurun"
         android:inputType="textPersonName"
         android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/textView44"
         app:layout_constraintEnd_toStartOf="@+id/textView43"
@@ -29,12 +32,14 @@
 
     <TextView
         android:id="@+id/textView43"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="= new Scanner(System.in);"
         android:textColor="@color/colorAccent"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/edCevap6_3_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edCevap6_3_1"
@@ -42,11 +47,12 @@
 
     <TextView
         android:id="@+id/textView44"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:background="@drawable/elips"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="System.out.println(''Lütfen bir kelime giriniz :'');"
@@ -59,14 +65,16 @@
 
     <TextView
         android:id="@+id/textView45"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="= veriGirisi.nextLine();"
         android:textColor="@color/colorAccent"
-        android:textSize="16sp"
+        android:background="@drawable/elips"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/edCevap6_3_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edCevap6_3_2"
@@ -74,12 +82,15 @@
 
     <EditText
         android:id="@+id/edCevap6_3_2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
+        android:background="@drawable/elips"
+        android:textColorHint="@color/colorAccent"
+        android:gravity="center|center_horizontal|center_vertical"
         android:hint="boşluğu doldurun"
         android:inputType="textPersonName"
         android:textColor="@color/colorAccent"
@@ -90,14 +101,17 @@
 
     <EditText
         android:id="@+id/edCevap6_3_3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
+        android:gravity="center|center_horizontal|center_vertical"
         android:hint="boşluğu dolurunuz"
         android:inputType="textPersonName"
+        android:background="@drawable/elips"
+        android:textColorHint="@color/colorAccent"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/tvCevap6_3"
@@ -106,14 +120,16 @@
 
     <TextView
         android:id="@+id/textView47"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text=": Java ögreniyorum"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"
+        android:background="@drawable/elips"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/edCevap6_3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edCevap6_3_3"
@@ -121,15 +137,16 @@
 
     <TextView
         android:id="@+id/tvCevap6_3"
-        android:layout_width="395dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
+        android:background="@drawable/elips"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir6_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,10 +160,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="calistir6_3"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam6_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,10 +177,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+
         android:onClick="devam6_3"
         android:text="İP UCU"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
