--- a/app/src/main/res/layout/activity_java_bahcesi_button7_2.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button7_2.xml
@@ -4,67 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JavaBahcesi2.JavaBahcesiButton2_3"
-    android:background="@drawable/simgepembe"
+    android:background="@drawable/simgekahve"
+    tools:context=".JavaBahcesi7.JavaBahcesiButton7_2">
 
-    >
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textView51"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Java ile çarpma ve bölme işlemlerin de gerçekleştirebilirsin.Çarpma için * ,bölme için / işaretini kullanmalısın"
+        android:text="int veri tipini String veri tipine dönüştürmek için String.valueOf() yada  Integer.toString() fonksiyonlarını kullanırız."
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintBottom_toTopOf="@+id/textView52"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView14"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/elips"
-        android:layout_marginBottom="16dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="3*(4+3)"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvCevap2_3_1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
-
-    <TextView
-        android:id="@+id/tvCevap2_3_1"
+        android:id="@+id/textView52"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:textSize="32sp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
+
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="int sayi= 10;"
         android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/textView16"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView53"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/textView53"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -73,61 +55,79 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="10/2"
+        android:text="String kelime = String.valueOf(sayi);"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvCevap2_3_2"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView54"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCevap2_3_1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView52" />
 
     <TextView
-        android:id="@+id/tvCevap2_3_2"
-        android:background="@drawable/elips"
-        android:textColor="@color/colorAccent"
+        android:id="@+id/textView54"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalistir2_3"
+        android:text="System.out.println(kelime)"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvCevap7_2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView53" />
+
+    <TextView
+        android:id="@+id/tvCevap7_2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:textColor="@color/colorAccent"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView54" />
 
     <Button
-        android:id="@+id/btnCalistir2_3"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:onClick="calistir2_3"
-        android:text="Çalıştır"
-        app:layout_constraintBottom_toTopOf="@+id/btnDevam2_3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/elips_button"
+        android:onClick="calistir7_2"
+        android:text="ÇALIŞTIR"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/tvCevap2_3_2" />
+        app:layout_constraintBottom_toTopOf="@+id/btnDevam7_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvCevap7_2" />
 
     <Button
-        android:id="@+id/btnDevam2_3"
+        android:id="@+id/btnDevam7_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
-        android:onClick="devam2_3"
-        android:text="Devam"
-        android:background="@drawable/elips_button"
+        android:onClick="devam7_2"
+        android:text="DEVAM"
         android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistir2_3" />
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
