--- a/app/src/main/res/layout/activity_java_bahcesi_button7_3.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button7_3.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JavaBahcesi2.JavaBahcesiButton2_3"
-    android:background="@drawable/simgepembe"
+    tools:context=".JavaBahcesi7.JavaBahcesiButton7_3"
 
+    android:background="@drawable/simgekahve"
     >
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textView55"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -19,115 +19,118 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Java ile çarpma ve bölme işlemlerin de gerçekleştirebilirsin.Çarpma için * ,bölme için / işaretini kullanmalısın"
+        android:text="Kod çalıştığında ekranda ne gösterir ? "
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintBottom_toTopOf="@+id/textView56"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/textView56"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/elips"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="3*(4+3)"
+        android:text="String kelime=''131'';    ve    int sayi = 50;"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvCevap2_3_1"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView57"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintTop_toBottomOf="@+id/textView55" />
 
     <TextView
-        android:id="@+id/tvCevap2_3_1"
+        android:id="@+id/textView57"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:textSize="32sp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="System.out.println(String.valueOf(sayi) + Integer.valueOf(kelime));"
         android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/textView16"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap7_3_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/textView56" />
 
-    <TextView
-        android:id="@+id/textView16"
+    <Button
+        android:id="@+id/btnCevap7_3_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/elips"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="10/2"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvCevap2_3_2"
+        android:background="@drawable/elips_button"
+        android:text="HATA ! "
+        android:onClick="btnCevap7_3_1"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap7_3_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCevap2_3_1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView57" />
 
-    <TextView
-        android:id="@+id/tvCevap2_3_2"
-        android:background="@drawable/elips"
-        android:textColor="@color/colorAccent"
+    <Button
+        android:id="@+id/btnCevap7_3_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalistir2_3"
+        android:background="@drawable/elips_button"
+        android:onClick="btnCevap7_3_2"
+        android:text="50131"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap7_3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevap7_3_1" />
 
     <Button
-        android:id="@+id/btnCalistir2_3"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnCevap7_3_3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="48dp"
         android:layout_marginBottom="16dp"
-        android:onClick="calistir2_3"
-        android:text="Çalıştır"
-        app:layout_constraintBottom_toTopOf="@+id/btnDevam2_3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/elips_button"
+        android:onClick="btnCevap7_3_3"
+        android:text="181"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/tvCevap2_3_2" />
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap7_3_4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCevap7_3_2" />
 
     <Button
-        android:id="@+id/btnDevam2_3"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnCevap7_3_4"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="56dp"
         android:layout_marginBottom="32dp"
-        android:onClick="devam2_3"
-        android:text="Devam"
         android:background="@drawable/elips_button"
+        android:onClick="btnCevap7_3_4"
+        android:text="13150"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistir2_3" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevap7_3_3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
