--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,7 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="166dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="   Name"
+
+        android:textColorHint="@color/colorAccent"
+        android:background="@drawable/elips"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,9 +29,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="172dp"
-        android:background="@android:color/transparent"
+
+        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips"
         android:onClick="signInButton"
-        android:text="𝑺𝑰𝑵𝑮 𝑰𝑵"
+        android:text="𝑺𝑰𝑮𝑵 𝑰𝑵"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,9 +45,10 @@
         android:layout_height="100dp"
         android:layout_marginStart="43dp"
         android:layout_marginEnd="32dp"
-        android:background="@android:color/transparent"
+        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips"
         android:textSize="20sp"
-        android:text="𝑺𝑰𝑵𝑮 𝑼𝑷"
+        android:text="𝑺𝑰𝑮𝑵 𝑼𝑷"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnSignIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnSignIn" />
@@ -52,7 +58,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Password"
+        android:hint="   Password"
+        android:textColorHint="@color/colorAccent"
+        android:background="@drawable/elips"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
