--- a/app/src/main/res/layout/activity_java_bahcesi_button1_5.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button1_5.xml
@@ -9,29 +9,34 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
 
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+
+        android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="********('Efsane')"
         android:textColor="@color/colorAccent"
-
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:background="@drawable/elips"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="Ekrana 'Efsane' yazdırmak için  **** alanına ne gelmelidir ?"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
@@ -42,14 +47,18 @@
 
     <EditText
         android:id="@+id/edCevap1_5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
+        android:gravity="center|center_horizontal|center_vertical"
         android:hint="Yazmaya başla"
+        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips"
+        android:textColorHint="@color/colorAccent"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir1_5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,11 +70,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:onClick="calistir1_5"
         android:text="Çalıştır"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam1_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,9 +89,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="Devam"
+        android:layout_marginBottom="32dp"
         android:onClick="devam1_5"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
+        android:text="Devam"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
