--- a/app/src/main/res/layout/activity_java_bahcesi_button2_1.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button2_1.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/simge2"
+    android:background="@drawable/simgepembe"
     tools:context=".JavaBahcesi2.JavaBahcesiButton2_1">
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Java hesaplamalar yapabilir.Doğrudan işlemi yaz ve cevabı al."
+        android:background="@drawable/elips"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
@@ -26,17 +27,18 @@
 
     <TextView
         android:id="@+id/tvCevap2_1"
-        android:layout_width="400dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
-        android:textSize="32sp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
+        android:textSize="32sp"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir2_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -48,10 +50,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="calistir2_1"
         android:text="Çalıştır"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam2_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,11 +66,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="64dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/elips_button"
         android:onClick="devam2_1"
         android:text="Devam"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,12 +78,14 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/elips"
+        android:layout_marginBottom="16dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="2+2"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
