--- a/app/src/main/res/layout/activity_java_bahcesi_button2_2.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button2_2.xml
@@ -5,19 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".JavaBahcesi2.JavaBahcesiButton2_2"
-    android:background="@drawable/simge2"
+    android:background="@drawable/simgepembe"
 
     >
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="400dp"
-        android:layout_height="75dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="12+3-5"
         android:textColor="@color/colorAccent"
@@ -29,13 +29,17 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="Kod çalıştığında ekrana ne gösterecektir  ?"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
+        android:background="@drawable/elips"
         app:layout_constraintBottom_toTopOf="@+id/edCevap2_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,15 +48,19 @@
     <EditText
         android:id="@+id/edCevap2_2"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="24dp"
-        android:background="@color/colorPrimary"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:ems="10"
+        android:gravity="center|center_horizontal|center_vertical"
         android:hint="Yazmaya başla"
         android:inputType="textPersonName"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
+        android:textColorHint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir2_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,13 +71,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         android:onClick="calistir2_2"
         android:text="Çalıştır"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam2_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,13 +88,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/colorPrimary"
+      android:background="@drawable/elips_button"
         android:onClick="devam2_2"
         android:text="Devam"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
