--- a/app/src/main/res/layout/activity_java_bahcesi_button4_1.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button4_1.xml
@@ -12,30 +12,34 @@
     <TextView
         android:id="@+id/textView23"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="Math.pow(2 + ? ,3);"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView24"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:background="@drawable/elips"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çalıştığında ekranda 27 olması için  ? yerine ne gelmelidir ? "
+        android:text="  Kod çalıştığında ekranda 27 olması için  ? yerine ne gelmelidir ?"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/edCevap4_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,14 +47,19 @@
 
     <EditText
         android:id="@+id/edCevap4_1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
+        android:textColorHint="@color/colorAccent"
+        android:textColor="@color/colorAccent"
         android:ems="10"
-        android:hint="Yazmaya Başla"
+        android:hint="   Yazmaya Başla"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/btnCalistir4_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
@@ -65,8 +74,8 @@
         android:layout_marginBottom="16dp"
         android:onClick="calistir4_1"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam4_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,8 +91,8 @@
         android:layout_marginBottom="32dp"
         android:onClick="devam4_1"
         android:text="DEVAM"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
