--- a/app/src/main/res/layout/activity_java_bahcesi_button4_3.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button4_3.xml
@@ -11,15 +11,16 @@
     <TextView
         android:id="@+id/textView27"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="% operatörü bölümü yapar ve bölme işlemindeki kalanı döndürür. 9.0 içerisinde 2.0, 4 tane vardır.Kalan 1'dir"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView28"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +30,10 @@
         android:id="@+id/textView28"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:background="@drawable/elips"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="9  %  2 "
@@ -44,12 +46,13 @@
 
     <TextView
         android:id="@+id/tvCevap4_3"
-        android:layout_width="411dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
         android:textSize="36sp"
@@ -68,8 +71,8 @@
         android:layout_marginBottom="16dp"
         android:onClick="calistir4_3"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam4_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,8 +88,8 @@
         android:layout_marginBottom="32dp"
         android:onClick="devam4_3"
         android:text="DEVAM"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/elips_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
