--- a/app/src/main/res/layout/activity_java_bahcesi_button5_1.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button5_1.xml
@@ -11,12 +11,13 @@
 
     <TextView
         android:id="@+id/textView30"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:background="@drawable/elips"
+        android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="String veri tipindeki değerleri birleştirebilirsin."
         android:textColor="@color/colorAccent"
@@ -28,12 +29,13 @@
 
     <TextView
         android:id="@+id/textView31"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:text="System.out.println(''Efsane'' + ''geliyor''); "
         android:textColor="@color/colorAccent"
@@ -46,14 +48,15 @@
     <TextView
         android:id="@+id/tvCevap5_1"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:textSize="24sp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginBottom="24dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/elips"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir5_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,13 +67,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips_button"
         android:onClick="calistir5_1"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam5_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,13 +85,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/elips_button"
         android:onClick="devam5_1"
         android:text="DEVAM"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
