--- a/app/src/main/res/layout/activity_java_bahcesi_button5_2.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button5_2.xml
@@ -9,13 +9,13 @@
     >
 
 
-
     <TextView
         android:id="@+id/textView32"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/elips"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
@@ -29,13 +29,15 @@
 
     <TextView
         android:id="@+id/textView33"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="System.out.println(''2''+1+''3'')"
+        android:background="@drawable/elips"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="  System.out.println(''2''+1+''3'')"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/tvCevap5_2"
@@ -46,13 +48,14 @@
     <TextView
         android:id="@+id/tvCevap5_2"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
+        android:background="@drawable/elips"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistir5_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,8 +70,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:onClick="calistir5_2"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:text="ÇALIŞTIR"
         app:layout_constraintBottom_toTopOf="@+id/btnDevam5_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,8 +87,8 @@
         android:layout_marginBottom="32dp"
         android:onClick="devam5_2"
         android:text="DEVAM"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
