--- a/app/src/main/res/layout/activity_ogrenim_secim.xml
+++ b/app/src/main/res/layout/activity_ogrenim_secim.xml
@@ -14,13 +14,15 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@android:color/transparent"
+        android:layout_height="150dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:text="🅱🅸🅻🅶🅸🅻🅴🅽🅳🅸🆁🅼🅴"
-        android:textSize="25sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="23sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,14 +31,15 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@android:color/transparent"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/elips"
         android:text="🅰🅻🅶🅾🆁🅸🆃🅼🅰 🅾🅶🆁🅴🅽🅼🅴🅺 🅸🆂🆃🅸🆈🅾🆁🆄🅼"
-        android:textSize="25sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,15 +48,16 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@android:color/transparent"
+        android:layout_height="150dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/elips"
         android:onClick="javaBahcesiGiris"
         android:text="🅹🅰🆅🅰 🅾🅶🆁🅴🅽🅼🅴🅺 🅸🆂🆃🅸🆈🅾🆁🆄🅼"
-        android:textSize="25sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
