--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#0df934</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#7bfffb</color>
 </resources>
