--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,15 +9,19 @@
 
     <EditText
         android:id="@+id/edNameSignInActivity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="166dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/elips"
         android:ems="10"
         android:hint="   Name"
-
-        android:textColorHint="@color/colorAccent"
-        android:background="@drawable/elips"
         android:inputType="textPersonName"
+        android:textColorHint="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/edPasswordSingInActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,16 +30,18 @@
         android:id="@+id/btnSignIn"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="172dp"
 
-        android:textColor="@color/colorAccent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/elips"
         android:onClick="signInButton"
         android:text="𝑺𝑰𝑮𝑵 𝑰𝑵"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnSıngUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edPasswordSingInActivity" />
 
@@ -43,27 +49,32 @@
         android:id="@+id/btnSıngUp"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginEnd="32dp"
-        android:textColor="@color/colorAccent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/elips"
-        android:textSize="20sp"
         android:text="𝑺𝑰𝑮𝑵 𝑼𝑷"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnSignIn"
+        android:textColor="@color/colorAccent"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnSignIn" />
+        app:layout_constraintStart_toEndOf="@+id/btnSignIn"
+        app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
 
     <EditText
         android:id="@+id/edPasswordSingInActivity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/elips"
         android:ems="10"
         android:hint="   Password"
-        android:textColorHint="@color/colorAccent"
-        android:background="@drawable/elips"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColorHint="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/edNameSignInActivity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
